--- a/vars/container-build.yml
+++ b/vars/container-build.yml
@@ -22,3 +22,16 @@ push_tooling_image: 'false'
 repository_host_fqdn: ''
 binary_repository: ''
 local_binary_location: '{{ repository_host_fqdn }}/{{ binary_repository }}'
+
+### Galaxy config for private hub
+configure_ansible_cfg: 'false'  ### use this when building in a disconnected env
+hub_url: ''
+hub_token: ''
+hub_content_path_prefix: 'api/galaxy/content/'
+galaxy_repos:
+  - name: validated
+    path: validated
+  - name: rh-certified
+    path: rh-certified
+  - name: community
+    path: community
