update intall client name

--- a/vars/clients.yml
+++ b/vars/clients.yml
@@ -8,7 +8,7 @@ clients:
     url: 'https://mirror.openshift.com/pub/openshift-v4/clients/ocp/'
     localurl: 'https://{{ local_binary_location }}/'
     pkg_version: 'latest'
-    pkg_name: 'openshift-install'
+    pkg_name: 'openshift-install-linux'
     pkg_suffix: '.tar.gz'
     localpkg_suffix: '.tar.gz'
     pkg_extention: '.tar.gz'
