--- a/vars/container-build.yml
+++ b/vars/container-build.yml
@@ -35,3 +35,12 @@ galaxy_repos:
   - name: community
     path: community
 dir_bundle_location: ''
+use_automation_hub: 'true'
+automation_hub_repos:
+  - name: automation_hub 
+    url: https://console.redhat.com/api/automation-hub/content/published/
+    auth_url: https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token
+    token: ''
+  - name: galaxy_hub 
+    url: https://galaxy.ansible.com/api/ 
+    token: ''
