--- a/vars/clients.yml
+++ b/vars/clients.yml
@@ -8,7 +8,8 @@ clients:
     url: 'https://mirror.openshift.com/pub/openshift-v4/clients/ocp/'
     localurl: 'https://{{ local_binary_location }}/'
     pkg_version: 'latest'
-    pkg_name: 'openshift-install-linux'
+    pkg_name: 'openshift-install-rhel9-amd64'
+    pkg_name_short: 'openshift-install-linux'
     pkg_suffix: '.tar.gz'
     localpkg_suffix: '.tar.gz'
     pkg_extention: '.tar.gz'
@@ -16,7 +17,8 @@ clients:
     url: 'https://mirror.openshift.com/pub/openshift-v4/clients/ocp/'
     localurl: 'https://{{ local_binary_location }}/'
     pkg_version: 'latest'
-    pkg_name: 'openshift-client-linux'
+    pkg_name: 'openshift-client-linux-amd64-rhel9'
+    pkg_name_short: 'openshift-client-linux'
     pkg_suffix: '.tar.gz'
     localpkg_suffix: '.tar.gz'
     pkg_extention: '.tar.gz'
@@ -24,7 +26,8 @@ clients:
     url: 'https://mirror.openshift.com/pub/openshift-v4/clients/ocp/'
     localurl: 'https://{{ local_binary_location }}/'
     pkg_version: 'latest'
-    pkg_name: 'oc-mirror'
+    pkg_name: 'oc-mirror.rhel9'
+    pkg_name_short: 'oc-mirror'
     pkg_suffix: '.tar.gz'
     localpkg_suffix: '.tar.gz'
     pkg_extention: '.tar.gz'
@@ -33,6 +36,7 @@ clients:
     localurl: 'https://{{ local_binary_location }}/'
     pkg_version: 'latest'
     pkg_name: 'ccoctl-linux-rhel9'
+    pkg_name_short: 'ccoctl'
     pkg_suffix: '.tar.gz'
     localpkg_suffix: '.tar.gz'
     pkg_extention: '.tar.gz'
@@ -41,6 +45,7 @@ clients:
     localurl: 'https://{{ local_binary_location }}/'
     pkg_version: 'latest'
     pkg_name: 'helm'
+    pkg_name_short: 'helm'
     pkg_suffix: '-linux-amd64.tar.gz'
     localpkg_suffix: '-linux-amd64.tar.gz'
     pkg_extention: '.tar.gz'
@@ -49,6 +54,7 @@ clients:
     localurl: 'https://{{ local_binary_location }}/'
     pkg_version: '0.13.7'
     pkg_name: 'terraform'
+    pkg_name_short: 'terraform'
     pkg_suffix: '_0.13.7_linux_amd64.zip'
     localpkg_suffix: '_0.13.7_linux_amd64.zip'
     pkg_extention: '.zip'
@@ -57,6 +63,7 @@ clients:
     localurl: 'https://{{ local_binary_location }}/'
     pkg_version: '5.88.0'
     pkg_name: 'terraform-provider-aws'
+    pkg_name_short: 'terraform-provider-aws'
     pkg_suffix: '_5.88.0_linux_amd64.zip'
     localpkg_suffix: '_5.88.0_linux_amd64.zip'
     pkg_extention: '.zip'
@@ -65,6 +72,7 @@ clients:
     localurl: 'https://{{ local_binary_location }}/'
     pkg_version: ''
     pkg_name: 'awscli'
+    pkg_name_short: 'awscli'
     pkg_suffix: '-exe-linux-x86_64.zip'
     localpkg_suffix: '-exe-linux-x86_64.zip'
     pkg_extention: '.zip'
