--- a/vars/container-build.yml
+++ b/vars/container-build.yml
@@ -12,7 +12,7 @@ disable_layer_caching: 'false'
 squash_layers: 'false'
 
 registry_auth_config: ''
-clients_dir: '{{ tooling_image_build_context_dir_prefix }}/{{ tooling_image_build_context_dir }}/_build/clients'
+clients_dir: ''
 download_clients: 'false'
 tooling_image_name: 'ocp-devops-tooling'
 registry_host_fqdn: ''
